--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ django-ckeditor-5==0.2.15
 django-js-asset==2.2.0
 django-modeltranslation==0.19.10
 django-solo==2.4.0
+django-translation==1.2
+djangorestframework==3.15.2
 pillow==11.0.0
 sqlparse==0.5.1
+translations==0.1.3
 tzdata==2024.2
